add image to tex file; todo: convert image, to use ony one filetype

--- a/payload/dummyData/developercv.cls
+++ b/payload/dummyData/developercv.cls
@@ -16,6 +16,19 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+%----------------------------------------------------------------------------------------
+%	Rounded image
+%----------------------------------------------------------------------------------------
+
+\usepackage{tikz}
+\newcommand{\roundpic}[4][]{
+    \tikz\node [circle, minimum width = #2,
+    path picture = {
+        \node [#1] at (path picture bounding box.center) {
+            \includegraphics[width=#3]{#4}};
+    }] {};}
+
 %----------------------------------------------------------------------------------------
 %	CLASS CONFIGURATION
 %----------------------------------------------------------------------------------------
