add option for a chartsection for every about me entry

--- a/payload/dummyData/developercv.cls
+++ b/payload/dummyData/developercv.cls
@@ -16,6 +16,17 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%----------------------------------------------------------------------------------------
+%	Wrap figure
+%----------------------------------------------------------------------------------------
+
+\usepackage{wrapfig}
+
+%----------------------------------------------------------------------------------------
+%	Multi columns
+%----------------------------------------------------------------------------------------
+
+\usepackage{multicol}
 
 %----------------------------------------------------------------------------------------
 %	Rounded image
